// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DropdownNavigation matches snapshot (defaultOpen) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c2:hover,
.c2[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c2[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  line-height: 2rem;
  margin: 2px;
  overflow: hidden;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c8:hover {
  background-color: #DBDEE1;
  color: #000000;
}

.c8[disabled] {
  color: #B7BBC2;
  pointer-events: none;
}

.c6 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  list-style-type: none;
  margin: 0;
  overflow-y: auto;
  padding: 0;
  position: absolute;
  width: 100%;
}

.c5 {
  box-sizing: border-box;
  position: fixed;
  z-index: 100000;
  bottom: var(--spacing-2x);
  right: var(--spacing-2x);
}

.c0 {
  position: relative;
}

.c3 {
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c4 {
  margin-left: var(--spacing-1x);
}

.c7 {
  left: 0px;
  max-width: 350px;
  min-width: 200px;
  position: absolute;
  top: 0px;
  width: initial;
  z-index: 99998;
}

<body>
  <div>
    <div
      aria-label="ariaLabel"
      class="c0"
      data-testid="nav-container"
      id="uuid1"
    >
      <button
        aria-expanded="true"
        class="c1 c2 c3"
        data-testid="navigation-button"
        type="button"
      >
        Test Button
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-up c4"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m18 15-6-6-6 6"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="c5"
    data-testid="toasts"
  />
  <ul
    class="c6 c7"
    data-testid="dropdown-navDropdown"
    id="uuid2"
  >
    <li
      data-testid="listitem-optionA"
    >
      <a
        class="c8"
        data-testid="listitem-optionA-link"
        href="/testa"
        tabindex="0"
      >
        <span
          class="c9"
        >
          Option A
        </span>
      </a>
    </li>
    <li
      data-testid="listitem-optionB"
    >
      <a
        class="c8"
        data-testid="listitem-optionB-link"
        href="/testb"
        tabindex="0"
      >
        <span
          class="c9"
        >
          Option B
        </span>
      </a>
    </li>
    <li
      data-testid="listitem-optionC"
    >
      <a
        class="c8"
        data-testid="listitem-optionC-link"
        href="/testc"
        tabindex="0"
      >
        <span
          class="c9"
        >
          Option C
        </span>
      </a>
    </li>
    <li
      data-testid="listitem-optionD"
    >
      <a
        class="c8"
        data-testid="listitem-optionD-link"
        href="/testd"
        tabindex="0"
      >
        <span
          class="c9"
        >
          Option D
        </span>
      </a>
    </li>
  </ul>
</body>
`;

exports[`DropdownNavigation matches snapshot (tag="nav") 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c2:hover,
.c2[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c2[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  position: relative;
}

.c3 {
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c4 {
  margin-left: var(--spacing-1x);
}

<nav
  aria-label="ariaLabel"
  class="c0"
  data-testid="nav-container"
  id="uuid1"
>
  <button
    aria-expanded="false"
    class="c1 c2 c3"
    data-testid="navigation-button"
    type="button"
  >
    Test Button
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-down c4"
      fill="none"
      focusable="false"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6 9 6 6 6-6"
      />
    </svg>
  </button>
</nav>
`;

exports[`DropdownNavigation matches snapshot 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c2:hover,
.c2[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c2[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  line-height: 2rem;
  margin: 2px;
  overflow: hidden;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c8:hover {
  background-color: #DBDEE1;
  color: #000000;
}

.c8[disabled] {
  color: #B7BBC2;
  pointer-events: none;
}

.c6 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  list-style-type: none;
  margin: 0;
  overflow-y: auto;
  padding: 0;
  position: absolute;
  width: 100%;
}

.c5 {
  box-sizing: border-box;
  position: fixed;
  z-index: 100000;
  bottom: var(--spacing-2x);
  right: var(--spacing-2x);
}

.c0 {
  position: relative;
}

.c3 {
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c4 {
  margin-left: var(--spacing-1x);
}

.c7 {
  left: 0px;
  max-width: 350px;
  min-width: 200px;
  position: absolute;
  top: 4px;
  width: initial;
  z-index: 99998;
}

<body>
  <div>
    <div
      aria-label="ariaLabel"
      class="c0"
      data-testid="nav-container"
      id="uuid1"
    >
      <button
        aria-expanded="true"
        class="c1 c2 c3"
        data-testid="navigation-button"
        type="button"
      >
        Test Button
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-up c4"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m18 15-6-6-6 6"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="c5"
    data-testid="toasts"
  />
  <ul
    class="c6 c7"
    data-testid="dropdown-navDropdown"
    id="uuid2"
  >
    <li
      data-testid="listitem-optionA"
    >
      <a
        class="c8"
        data-testid="listitem-optionA-link"
        href="/testa"
        tabindex="0"
      >
        <span
          class="c9"
        >
          Option A
        </span>
      </a>
    </li>
    <li
      data-testid="listitem-optionB"
    >
      <a
        class="c8"
        data-testid="listitem-optionB-link"
        href="/testb"
        tabindex="0"
      >
        <span
          class="c9"
        >
          Option B
        </span>
      </a>
    </li>
    <li
      data-testid="listitem-optionC"
    >
      <a
        class="c8"
        data-testid="listitem-optionC-link"
        href="/testc"
        tabindex="0"
      >
        <span
          class="c9"
        >
          Option C
        </span>
      </a>
    </li>
    <li
      data-testid="listitem-optionD"
    >
      <a
        class="c8"
        data-testid="listitem-optionD-link"
        href="/testd"
        tabindex="0"
      >
        <span
          class="c9"
        >
          Option D
        </span>
      </a>
    </li>
  </ul>
</body>
`;
